--- a/dicee.html
+++ b/dicee.html
@@ -24,7 +24,11 @@
       </div>
     </div>
 
-    <footer>www 🎲 App Brewery 🎲 com</footer>
+    <footer>
+      Made with ❤️ in Denmark. – Build as project of "Full-Stack Development
+      Bootcamp" on Udemy by Angela Yu. To see more go to
+      https://www.appbrewery.com/
+    </footer>
     <script src="index.js"></script>
   </body>
 </html>
